# speech-to-text-FR-model

./: .gitignore  README.md  create_model.py  load_data.py  pyproject.toml  tokenize_labels.py  train.py  train_model.py
