[tool.poetry]
name = "speech-to-text-fr-model"
version = "0.1.0"
description = ""
authors = ["lil-sussy <naykeysnet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
librosa = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
